# sw-battle

./: .gitignore  CMakeLists.txt  Concept.md  Docs.md  README.md  commands_example.txt  concept.txt
scenarios/negative/: double_create_map.txt  not_initialized_map.txt
scenarios/positive/: interaction_with_died_unit.txt  scenario_2.txt  scenario_4.txt  scenario_5.txt  two_warrior_march_and_attack.txt  warrior_and_archer_attack.txt
src/: main.cpp
src/BL/: ForwardDeclaration.hpp  Simulator.cpp  Simulator.hpp
src/BL/Commands/: Command.cpp  Command.hpp  ForwardDeclaration.hpp
src/BL/Models/: Action.cpp  Action.hpp  ForwardDeclaration.hpp  Map.cpp  Map.hpp  Simulator.cpp  Simulator.hpp  Unit.cpp  Unit.hpp
src/BL/Models/Action/: BaseAction.cpp  BaseAction.hpp  MeleeAttack.cpp  MeleeAttack.hpp  Move.cpp  Move.hpp  RangeAttack.cpp  RangeAttack.hpp
src/BL/Models/Unit/: Archer.cpp  Archer.hpp  BaseUnit.cpp  (+3 more)
src/BL/Resources/: Map.cpp  Map.hpp
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnArcher.hpp  SpawnWarrior.hpp
src/IO/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: CommandParser.hpp  EventLog.hpp  PrintDebug.hpp
tests/: CMakeLists.txt
tests/cases/expected/: archer_attack_warrior.txt  full_simulation.txt  interaction_with_died_unit.txt  two_warrior_attack.txt  two_warrior_march_and_attack.txt  warrior_and_archer_attack.txt
tests/cases/negative/: spawn_units_on_one_place.txt  spawn_units_with_same_ids.txt
tests/src/: PositiveTests.cpp  TestFixture.hpp
(+2 files in other folders)
